[package]
name = "robin_gb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.15.0"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
glam = "0.27.0"
num_enum = "0.7.2"
pollster = "0.3.0"
regex = "1.10.4"
wgpu = "22.1.0"
winit = "0.30.5"
